--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <script>
-        const apikey =  "6bf92d6021de90dfd3da899d7f2460de";
+        const apikey =  "  use api key ";
         const apiUrl =  "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
         const searchBox = document.querySelector(".search input");
